# evolve_SAP

./: README.md  SAP_pipeline_flux.py  app.py  compare_sap.py  pyproject.toml  req.txt  req1.txt  requirements.txt  run_SAP_flux.py
benchmarks/: gpt_eval.py
llm_interface/: llm_SAP.py
openevolve_sap/: config.yaml  evaluator.py  initial_program.py  prompt_set.json  run_openevolve_sap.py
openevolve_sap/evolution_eval_results/1775722176_b9acfa02/: status.jsonl
results/A allien glove with six fingers/: scores.json
results/A polarbear dancing breakdance in the nightclub/: scores.json
results/A polarbear holding a beer/: scores.json
