[project]
name = "sap-paper-code"
version = "0.1.0"
description = "Code for the SAP paper"
dependencies = [
    "accelerate>=0.17.0",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "gradio>=4.44.1",
    "numpy>=2.0.2",
    "openai>=1.0.0",
    "openevolve",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "spaces>=0.37.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
requires-python = ">=3.9"
